[gd_scene load_steps=8 format=2]

[ext_resource path="res://customer/dialougeBox.png" type="Texture" id=1]
[ext_resource path="res://ui/dialougeBox.gd" type="Script" id=2]
[ext_resource path="res://ui/Enchanted Land DS D.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[node name="dialougeBox" type="TextureRect"]
anchor_right = 0.245117
anchor_bottom = 0.466667
texture = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CustomerName" type="Label" parent="."]
margin_left = 16.0
margin_top = 40.0
margin_right = 232.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "title"
align = 1

[node name="CustomerDialouge" type="RichTextLabel" parent="."]
margin_left = 24.0
margin_top = 64.0
margin_right = 224.0
margin_bottom = 104.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "dialouge"
text = "dialouge"
fit_content_height = true

[node name="Accept" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = -48.0
margin_right = 96.0
margin_bottom = -20.0
custom_colors/font_color = Color( 0.0235294, 0.537255, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Accept"
flat = true

[node name="Decline" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -99.0
margin_top = -48.0
margin_right = -27.0
margin_bottom = -20.0
custom_colors/font_color = Color( 0.537255, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Decline"
flat = true

[node name="Next" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -36.0
margin_top = -48.0
margin_right = 36.0
margin_bottom = -20.0
custom_colors/font_color = Color( 0, 0.027451, 0.537255, 1 )
custom_fonts/font = SubResource( 4 )
text = "Next"
flat = true

[connection signal="pressed" from="Accept" to="." method="_on_Accept_pressed"]
[connection signal="pressed" from="Decline" to="." method="_on_Decline_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
